<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <DUT Name="ST_FastGateValveMonitor" Id="{8ce4cd76-24c1-430a-9a36-79daf90b787c}">
    <Declaration><![CDATA[TYPE ST_FastGateValveMonitor :
STRUCT
	ClosedSt : BOOL;
	OpenSt : BOOL;
	InterlockSt : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>